--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=SpringRest
 server.port =8085
+spring.datasource.url=jdbc:postgresql://localhost:5432/Demo
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
